# wb-data-service

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yaml
docker/: Dockerfile.wb_data_service  Dockerfile.wb_data_tg_bot
docs/: swagger.yaml
src/wb_data_service/: api.py  config.py  main.py  wb_data_logging.py
src/wb_data_service/database/: core.py  deps.py  repository.py  utils.py
src/wb_data_service/product/: models.py  repository.py  router.py  service.py
src/wb_data_service/wb_service/: config.py  deps.py  exceptions.py  session.py
src/wb_data_service/wb_service/api/requests/: base.py  card_detail.py  price_history.py
src/wb_data_service/wb_service/utils/: exception.py  params.py  retry.py
src/wb_data_shared/exceptions/: api_error.py
src/wb_data_shared/schemas/: base.py  protocol.py
src/wb_data_tg_bot/: bot.py  config.py  handlers.py  main.py  wb_data_logging.py
src/wb_data_tg_bot/service_client/: client.py  session.py  utils.py
